syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.LotteryContract";

service LotteryContract {
    option (aelf.csharp_state) = "AElf.Contracts.LotteryContract.LotteryContractState";

    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {
    }
    rpc Buy (BuyInput) returns (google.protobuf.Empty) {
    }
    rpc Draw (google.protobuf.Int64Value) returns (google.protobuf.Empty) {
    }
    rpc PrepareDraw (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc TakeReward (TakeRewardInput) returns (google.protobuf.Empty) {
    }

    //View
    rpc GetPeriods (GetPeriodsInput) returns (GetPeriodsOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetLottery (GetLotteryInput) returns (GetLotteryOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetLotteries (google.protobuf.Empty) returns (GetLotteriesOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetRewardedLotteries (GetLotteriesInput) returns (GetLotteriesOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetPeriod (google.protobuf.Int64Value) returns (PeriodBody) {
        option (aelf.is_view) = true;
    }
    rpc GetLatestDrawPeriod (google.protobuf.Empty) returns (PeriodBody) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentPeriod (google.protobuf.Empty) returns (PeriodBody) {
        option (aelf.is_view) = true;
    }
    rpc GetPrice (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
}

message InitializeInput {
    string token_symbol = 1;
    int64 price = 2;
}

message BuyInput{
    LotteryType type = 1;
    repeated BetBody betInfos = 2;
    aelf.Address seller = 3;
    int64 rate = 4;
}

enum LotteryType{
    ONE_STAR = 0;
}

message BetBody {
    repeated int32 bets = 1;
}

message TakeRewardInput {
    int64 lottery_id = 1;
}

message GetPeriodsInput {
    int32 offset = 1;
    int32 limit = 2;
}

message GetPeriodsOutput {
    repeated PeriodBody periods = 1;
}

message GetLotteriesInput {
    int32 offset = 1;
    int32 limit = 2;
}

message GetLotteriesOutput {
    repeated LotteryDetail lotteries = 1;
}

message GetLotteryInput {
    int64 lottery_id = 1;
}

message GetLotteryOutput {
    LotteryDetail lottery = 1;
}

message PeriodBody {
    string period_name = 1;
    int64 draw_block_number = 2;
    aelf.Hash random_hash = 3;
    int64 lucky_number = 4;
    int64 block_number = 5;
    google.protobuf.Timestamp create_time = 6;
    google.protobuf.Timestamp draw_time = 7;
}

message Lottery {              
    int64 id = 1;
    aelf.Address owner = 2;
    int64 period = 3;
    LotteryType type = 4;
    int64 price = 12;
    repeated BetBody bets = 5;
    bool cashed = 6;
    aelf.Address seller = 7;
    int64 bonus = 8;
    int64 reward = 9;
    int64 rate = 10;
    google.protobuf.Timestamp create_time = 11;
    int64 block_number = 13;                          
}

message LotteryDetail{
    int64 id = 1;
    string period_name = 2;
    int64 period = 3;
    LotteryType type = 4;
    int64 price = 12;
    repeated BetBody bets = 5;
    bool cashed = 6;
    int64 reward = 9;
    google.protobuf.Timestamp create_time = 11;
}

message LotteryList {
    repeated int64 ids = 1;
}